Fix: Add CNAME record and fix ProjectCard height
- Add CNAME file to static in preparation for Github Actions deployment
workflow
- Set height to 100% for `ProjectCard` to ensure all cards are the same
height (ie. the height of the tallest card after text & tag truncation)

--- a/src/components/ProjectCard/ProjectCardStyles.module.css
+++ b/src/components/ProjectCard/ProjectCardStyles.module.css
@@ -19,6 +19,7 @@
   box-shadow: var(--ifm-global-shadow-lw);
   display: flex;
   flex-direction: column;
+  height: 100%;
   overflow: hidden;
   transition: all 0.2s ease;
 }
